fix: thread title wrap

--- a/static/styles/thread.css
+++ b/static/styles/thread.css
@@ -4,3 +4,7 @@
 .thread-title-link:hover {
   text-decoration: underline;
 }
+
+.thread-title {
+  overflow-wrap: break-word;
+}
